[package]
name = "rust-sadari-cli"
version = "0.1.0"
authors = ["GeunYeong Cheon <24crazyoung@gmail.com>"]
edition = "2018"
lisense = "Beerware"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.5"
tui="0.8.0"
rand="0.7.3"
